--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <!-- Fonts -->
-    <string name="font_regular" translatable="false">font/open_sans_regular.ttf</string>
-    <string name="font_semibold" translatable="false">font/open_sans_semibold.ttf</string>
-    <string name="font_bold" translatable="false">font/open_sans_bold.ttf</string>
+    <string name="font_regular" translatable="false">fonts/open_sans_regular.ttf</string>
+    <string name="font_semibold" translatable="false">fonts/open_sans_semibold.ttf</string>
+    <string name="font_bold" translatable="false">fonts/open_sans_bold.ttf</string>
 
     <!-- App -->
     <string name="app_name">Screenarrator</string>
